--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,18 @@
-beautifulsoup4==4.10.0
-certifi==2021.5.30
-charset-normalizer==2.0.5
-click==8.0.1
-cycler==0.10.0
-Flask==2.0.1
-Flask-Login==0.5.0
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.1
-html5lib==1.1
-idna==3.2
-itsdangerous==2.0.1
-Jinja2==3.0.1
-kiwisolver==1.3.2
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-numpy==1.21.2
-Pillow==8.3.2
-prettytable==2.2.0
-pyecharts==1.9.0
-pyparsing==2.4.7
-python-dateutil==2.8.2
-requests==2.26.0
-selenium==3.141.0
-simplejson==3.17.5
-six==1.16.0
-soupsieve==2.2.1
-SQLAlchemy==1.4.23
-urllib3==1.26.6
-wcwidth==0.2.5
-webencodings==0.5.1
 Werkzeug==2.0.1
+selenium==3.141.0
+prettytable==2.2.1
+Flask==2.0.1
+requests==2.26.0
+schedule==1.1.0
+Flask_Login==0.5.0
+Flask_SQLAlchemy==2.5.1
+Jinja2==3.0.1
+numpy==1.21.2
+APScheduler==3.8.0
+pyecharts==1.9.0
+matplotlib==3.4.3
+html5lib==1.1
+akshare==1.1.50
+beautifulsoup4==4.10.0
+demjson==2.2.4
+lxml==4.6.3
