--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 numpy
 matplotlib
-prettytable==2.2.0
 requests==2.26.0
 beautifulsoup4==4.10.0
 html5lib==1.1
@@ -20,7 +19,7 @@ prettytable==2.2.1
 APScheduler==3.8.0
 Flask_Login==0.5.0
 Flask==2.0.1
-akshare==1.1.53
+akshare
 beautifulsoup4==4.10.0
 brotli==1.0.9
 cryptography==35.0.0
@@ -33,5 +32,5 @@ ordereddict==1.1
 protobuf==3.18.1
 pyOpenSSL==21.0.0
 typing_extensions==3.10.0.2
-wincertstore==0.2.1
+wincertstore
 zipp==3.6.0
