--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,13 @@
-Werkzeug==2.0.1
-demjson==2.2.4
-Flask_SQLAlchemy==2.5.1
 Jinja2==3.0.1
+selenium==3.141.0
+demjson==2.2.4
 pyecharts==1.9.0
 prettytable==2.2.1
+Werkzeug==2.0.1
+requests==2.26.0
+Flask_SQLAlchemy==2.5.1
 APScheduler==3.8.0
-Flask_Login==0.5.0
 Flask==2.0.1
+Flask_Login==0.5.0
 akshare==1.1.53
 beautifulsoup4==4.10.0
-brotli==1.0.9
-cryptography==35.0.0
-Cython==0.29.24
-docutils==0.17.1
-importlib_metadata==4.8.1
-keyring==23.2.1
-lockfile==0.12.2
-ordereddict==1.1
-protobuf==3.18.1
-pyOpenSSL==21.0.0
-typing_extensions==3.10.0.2
-wincertstore==0.2.1
-zipp==3.6.0
