--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
+Werkzeug==2.0.1
+APScheduler==3.8.0
+prettytable==2.2.1
+numpy==1.21.2
+pyecharts==1.9.0
+webdriver_manager==3.5.2
+Flask_SQLAlchemy==2.5.1
+Jinja2==3.0.1
 selenium==3.141.0
 SQLAlchemy==1.4.25
 Flask==2.0.1
-Jinja2==3.0.1
-APScheduler==3.8.0
-pyecharts==1.9.0
-webdriver_manager==3.5.2
-Werkzeug==2.0.1
-pypinyin==0.42.1
-Flask_SQLAlchemy==2.5.1
 akshare==1.1.53
-requests==2.26.0
-prettytable==2.2.1
+pypinyin==0.42.1
 Flask_Login==0.5.0
+requests==2.26.0
 beautifulsoup4==4.10.0
